--- a/a2/a2.tex
+++ b/a2/a2.tex
@@ -293,15 +293,19 @@ $$A{[i]} = \sqrt{A{[i-1]}^2 + X{[i]}^2}$$
 
 Base case: $n = 1: A{[0]} = X{[0]}, A{[1]} = \sqrt{X{[0]}^2 + X{[1]}^2}$
 
-Assume that at $i$th iteration, $A[i] = \sqrt{A[i - 1]^2 + X[i]^2}$
+Assume that at $i$th iteration, $A[i] = \sqrt{\sum_{k=0}^{i}{X[k]^2}}$
+
+$$A[i]^2 = \sum_{k=0}^i (X[k]^2)$$
 
 Then, at the $i+1$th iteration, we have:
 
+$$A[i + 1] = \sqrt{\sum_{k=0}^{i+1}{X[k]^2}}$$
+
+$$A[i + 1] = \sqrt{\sum_{k=0}^{i}{X[k]^2} + X[i+1]^2}$$
+
+$$A[i + 1] = \sqrt{\sum_{k=0}^{i}{X[k]^2} + X[i+1]^2}$$
+
 $$A[i + 1] = \sqrt{A[i]^2 + X[i+1]^2}$$
-
-$$A[i + 1] = \sqrt{(\sqrt{A[i - 1]^2 + X[i]^2})^2 + X[i+1]^2}$$
-
-$$A[i + 1] = \sqrt{A[i - 1]^2 + X[i]^2 + X[i+1]^2}$$
 \end{proof}
 
 \section{Recurrence equation}
